<resources>
    <string name="app_name">TraLoiCauHoi</string>
    <string name="todo">TODO</string>
    <string name="textView_tendangnhap">Tên đăng nhập</string>
    <string name="textView_matkhau">Mật khẩu</string>
    <string name="button_dangnhap">Đăng Nhập</string>
    <string name="button_dangky">Đăng Ký</string>
    <string name="button_quenmatkhau">Quên Mật Khẩu</string>
    <string name="textView_tennguoichoi">Tên Người Chơi</string>
    <string name="todo2">TODO</string>
    <string name="textView_socredit">TextView</string>
    <string name="button_quanlytaikhoan">Quản Lý Tài Khoản</string>
    <string name="button_choimoi">Chơi Mới</string>
    <string name="button_bangxephang">Bảng Xếp Hạng</string>
    <string name="button_lichsuchoi">Lịch Sử Chơi</string>
    <string name="button_muacredit">Mua Credit</string>
    <string name="todo3">TODO</string>
    <string name="editText_dktendangnhap">Tên đăng nhập</string>
    <string name="editText_dkmatkhau">Mật khẩu</string>
    <string name="editText_xacnhanmk">Xác nhận mật khẩu</string>
    <string name="button_dkdangky">Đăng Ký</string>
    <string name="textView_thaydoianh">Thay đổi ảnh</string>
    <string name="todo4">TODO</string>
    <string name="editView_tendangnhap_cn">Tên đăng nhập</string>
    <string name="editText_dkemail">Email</string>
    <string name="editText_email_cn">Email</string>
    <string name="editText_matkhau_cn">Mật khẩu</string>
    <string name="editText_xacnhanmk_cn">Xác nhận mật khẩu</string>
    <string name="button_capnhat">Cập nhật</string>
    <string name="textView_linhvuc">Chọn lĩnh vực câu hỏi</string>
    <string name="button_linhvuc_thethao">Thể thao</string>
    <string name="button_linhvuc_dienanh">Điện ảnh</string>
    <string name="button_linhvuc_lichsu">Lịch sử</string>
    <string name="button_linhvuc_amnhac">Âm nhạc</string>
    <string name="button_linhvuc_vanhoaxahoi">Văn hóa - Xã hội</string>
    <string name="textView_tennguoichoi_tl">Tên Người Chơi</string>

    <string name="todo_5">TODO</string>
    <string name="textView_soluongcredit">3000</string>
    <string name="textView_diem">Điểm:</string>
    <string name="textView_sodiem">1000</string>
    <string name="textView_cauhoi_tl">Câu hỏi</string>
    <string name="button_thutucauhoi">1</string>
    <string name="textView_cauhoidangtl">Chelsea là clb của nước ?</string>
    <string name="button_dapan_a">A. Nước Anh</string>
    <string name="button_dapan_b">B. Nước đóng chai</string>
    <string name="button_dapan_c">C. Nước em</string>
    <string name="button_dapan_d">D. Nước Úc</string>
    <string name="textView_tennguoichoi_ls">Ten nguoi choi</string>
    <string name="textView_credit_ls">3000</string>
    <string name="todo5">TODO</string>
    <string name="textView_lichsuchoi">Lịch sử chơi</string>
    <string name="textView_ketthucluotchoi">Lượt Chơi kết thúc</string>
    <string name="textView_sodiemdatduoc">Số điểm đạt được:</string>
    <string name="textView_diemluotchoi">3500</string>
    <string name="button_themluot">Thêm lượt chơi: 300</string>
    <string name="button_kethuc">Kết thúc</string>
    <string name="todo6">todo6</string>
    <string name="textView_muacredit">Mua Credit</string>
    <string name="textView_creditmua"></string>
    <string name="textView_slcredit">3000</string>
    <string name="todo7">TODO</string>

    <string name="editText_matkhau">Mật khẩu</string>
    <string name="editText_tendn">Tên đăng nhập</string>
    <string name="textView_bangxephang">Ten nguoi choi</string>
    <string name="textView_creditbxh">3000</string>
    <string name="textView_bxh">Bảng xếp hạng</string>
    <string name="todo10">TODO</string>
    <string name="todo11">TODO</string>
    <string name="todo9">TODO</string>
    <string name="todo12">TODO</string>
    <string name="todo13">TODO</string>
    <string name="todo14">TODO</string>
    <string name="todo15">TODO</string>
    <string name="button_300">300</string>
    <string name="button_400">500</string>
    <string name="textView_300">20$</string>
    <string name="textView_500">30$</string>
    <string name="button_700">700</string>
    <string name="button_900">900</string>
    <string name="textView_700">40$</string>
    <string name="textView_900">50$</string>


</resources>
