<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">


    <TextView
        android:id="@+id/textView_tennguoichoi"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:drawableEnd="@drawable/ic_heart"
        android:text="@string/textView_tennguoichoi"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_soluongcredit"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:text="@string/textView_soluongcredit"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/imageView_5"
        app:layout_constraintTop_toTopOf="@+id/imageView_5" />

    <ImageView
        android:id="@+id/imageView_5"
        android:layout_width="36dp"
        android:layout_height="26dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_iconfinder_ruby_298863" />

    <TextView
        android:id="@+id/textView_diem"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:text="@string/textView_diem"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="100dp"
        android:text="@string/textView_sodiem"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_diem"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_cauhoi_tl"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:text="@string/textView_cauhoi_tl"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView_cauhoidangtl"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/textView_cauhoidangtl"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <Button
        android:id="@+id/button_dapan_a"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button"
        android:text="@string/button_dapan_a"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_cauhoidangtl" />

    <Button
        android:background="@drawable/button"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="25sp"
        android:textStyle="bold"
        android:id="@+id/button_dapan_b"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/button_dapan_b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_dapan_a"


        />

    <Button
        android:background="@drawable/button"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="25sp"
        android:textStyle="bold"
        android:id="@+id/button_dapan_c"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:soundEffectsEnabled="true"
        android:text="@string/button_dapan_c"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_dapan_b" />

    <Button
        android:background="@drawable/button"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="25sp"
        android:textStyle="bold"
        android:id="@+id/button_dapan_d"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/button_dapan_d"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_dapan_c" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/todo12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_discount" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:contentDescription="@string/todo13"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:srcCompat="@drawable/ic_iconfinder_ruby_298863" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:contentDescription="@string/todo14"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
        app:layout_constraintStart_toEndOf="@+id/imageButton2"
        app:srcCompat="@drawable/ic_iconfinder_phone8_216688" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:contentDescription="@string/todo15"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton3"
        app:layout_constraintStart_toEndOf="@+id/imageButton3"
        app:srcCompat="@drawable/ic_iconfinder_group2_309041" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_dapan_d" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:text="1"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_cauhoi_tl" />

</androidx.constraintlayout.widget.ConstraintLayout>