<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/imageView_2"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="80dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/android_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user" />

    <TextView

        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        android:text="@string/textView_linhvuc"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_2" />

    <Button
        android:background="@drawable/button"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="25sp"
        android:textStyle="bold"
        android:id="@+id/button_linhvuc_thethao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:text="@string/button_linhvuc_thethao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:background="@drawable/button"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="25sp"
        android:textStyle="bold"
        android:id="@+id/button_linhvuc_dienanh"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:text="@string/button_linhvuc_dienanh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_linhvuc_thethao" />

    <Button
        android:background="@drawable/button"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="25sp"
        android:textStyle="bold"
        android:id="@+id/button_linhvuc_lichsu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:text="@string/button_linhvuc_lichsu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_linhvuc_dienanh" />

    <Button
        android:background="@drawable/button"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="25sp"
        android:textStyle="bold"
        android:id="@+id/button_linhvuc_amnhac"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:text="@string/button_linhvuc_amnhac"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_linhvuc_lichsu" />

    <Button
        android:background="@drawable/button"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="25sp"
        android:textStyle="bold"
        android:id="@+id/button_linhvuc_vanhoaxahoi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:text="@string/button_linhvuc_vanhoaxahoi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_linhvuc_amnhac" />


</androidx.constraintlayout.widget.ConstraintLayout>